# symphony

./: .gitignore  README.md  orchestrator.py  pyproject.toml
agents/: brain_agent_factory.py  brain_instructions.py  goal_interpreter.py  sensory_agent.py  sensory_contract.py
core/: rollback.py  runtime.py  stack.py  tui.py  vision_result.py
gates/: engine.py
projects/portfolio/: test_contact_form.py
projects/smoke-fresh-20260419/: .symphony.json
projects/smoke-fresh-20260419/backend/: app.py
projects/test-broken/: .symphony.json  submit_contact_form.py  test_contact_form.py
projects/test-broken/backend/: app.py
symphony/: __init__.py  llm.py  orchestrator.py
symphony/cli/: main.py
symphony/evaluator/: evaluator.py
symphony/flow/: dsl.py  executor.py
symphony/patching/: __init__.py  policy.py
symphony/planner/: planner.py  schema.py
symphony/prompt/: compiler.py
tests/integration/: test_workflow.py
tests/unit/: test_architecture.py  test_brain_agent_factory.py  test_cli_patch_ux.py  test_evaluator.py  test_flow_dsl.py  test_orchestrator_patching.py  test_patch_policy.py  test_planner_schema.py  test_prompt_compiler.py  test_rollback.py  test_stack_detection.py  test_vision_result.py
