[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "2.0.0"
description = "LLM-first web reliability orchestrator"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "selenium>=4.43.0",
    "rich>=15.0.0",
    "click>=8.3.2",
]

[project.optional-dependencies]
openai = ["openai>=2.32.0"]
gemini = ["google-genai>=1.73.1"]
budget = ["tiktoken>=0.12.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
symphony = "symphony.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
